--- a/3.css
+++ b/3.css
@@ -1,4 +1,4 @@
-body {background-color:#ccf;}
+body {background-color:rgb(255, 255, 255);}
 body > div{width: 960px ; min-height: 720px;position:relative; outline:1px solid #777;margin:auto;}
 div.top { height:150px; width:960px; background-color:#8AA4B7;}
 div.stopka{height:100px; width:960px; background-color:#7A7D80;position:relative; clear:both;}
